# Curves

./: CMakeLists.txt  Curve.h  Point.h  README.md  Vector.h  main.cpp
curves/: CMakeLists.txt  Circle.cpp  Circle.h  Ellips.cpp  Ellips.h  Helix.cpp  Helix.h
curves/include/: Circle.h  Curve.h  Ellipse.h  Helix.h  Point.h  Vector.h
curves/src/: Circle.cpp  Ellipse.cpp  Helix.cpp  Point.cpp  Vector.cpp
curves_generator/: RandomCurveGenerator.cpp  RandomCurveGenerator.h
